# futures-research-portfolio

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: ARCHITECTURE.md  INTERVIEW_GUIDE.md
docs/superpowers/plans/: 2026-07-19-futures-research-portfolio-plan.md
frontend/: app.js  index.html  modules.json  styles.css
scripts/: build_static_site.py
src/cta_research_showcase/: __init__.py  api.py  causal_backtest.py  demo.py  domain.py  factor_combination.py  multitimeframe.py  research_loop.py  strategy_audit.py
tests/: test_causal_backtest.py  test_demo.py  test_domain.py  test_factor_combination.py  test_frontend_workbench.py  test_multitimeframe.py  test_research_loop.py  test_static_site.py  test_strategy_audit.py
